--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,15 @@ train = [
   "tensorboard>=2.13",
   "tqdm>=4.66",
 ]
+viz = [
+  "matplotlib>=3.7",
+]
+test = [
+  "pytest>=7.4",
+]
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
 
 [tool.setuptools]
 package-dir = {"" = "src"}
