Modularize reward computation

--- a/config/eval.yml
+++ b/config/eval.yml
@@ -1,5 +1,5 @@
 env:
-  seed: 0
+  seed: 123
   dt: 0.02
   episode_sec: 10.0
   frame_skip: 1
@@ -50,14 +50,14 @@ sensors:
 world:
   arena_m: [10.0, 10.0]             # [x, y]
   goal:
-    fixed: false
+    fixed: true
     pos_m: [2.0, 0.0]
     yaw_deg: 0.0
     clearance_m: 0.60
     height_m: 0.01
   obstacles:
     max_count: 30
-    count_range: [10, 25]
+    count_range: [15, 15]
     size_xy_range_m: [0.20, 0.80]
     height_m: 0.30
     cylinder_prob: 0.40             # probability of cylinder vs box
