Add Reward Dashboard and major training improvements
Features:
- Streamlit Reward Dashboard with real-time monitoring
  * Episode metrics (success rate, collision rate, returns)
  * Interactive reward weight tuning with sliders
  * Pie chart showing reward term contributions
  * Stacked area chart of terms over time
  * Latest evaluation video display
  * Auto-refresh every 2 seconds
  * Config save/load functionality

- Enhanced reward function
  * Added clearance reward (obstacle awareness from lidar)
  * Added stuck penalty
  * Improved smoothness (now penalizes action changes)
  * Better documentation and parameter passing

- Improved reward weights (config/recommended_rewards.yml)
  * Progress: 10.0 (was 1.0) - main dense signal
  * Goal bonus: 75.0 (was 20.0) - sparse success reward
  * Collision: -75.0 (was -10.0) - stronger avoidance
  * Relaxed success criteria (yaw: 30° was 10°)

- SAC exploration tuning
  * --ent-coef argument for entropy coefficient
  * --target-entropy argument for exploration control
  * Recommended: --ent-coef 0.1 for better exploration

- Automatic run naming system
  * Memorable names: sac_swift-falcon_20231220_143052
  * 2,304 unique combinations
  * Organized directory structure per run
  * Easy experiment tracking

- Episode JSONL logger (SB3 callback)
  * Logs episodes to runs/metrics/episodes.jsonl
  * Integrated with visual_train automatically
  * Tracks all reward terms and outcomes

- BEV camera for top-down visualization
  * Use --camera bev in eval scripts

- Comprehensive documentation
  * Dashboard guide
  * Reward improvements explanation
  * Quick command reference
  * Run naming system docs

- Tests for dashboard and logger

This update fixes the 'zero successes' problem with properly scaled rewards
and provides real-time monitoring tools for reward tuning.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,12 @@ test = [
 video = [
   "imageio[ffmpeg]>=2.31",
 ]
+ui = [
+  "streamlit>=1.30",
+  "pandas>=2.0",
+  "altair>=5.0",
+  "streamlit-autorefresh>=1.0.0",
+]
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
