--- a/config/static_goal.yml
+++ b/config/static_goal.yml
@@ -3,40 +3,34 @@ env:
   dt: 0.02
   episode_sec: 10.0
   frame_skip: 1
-
 robot:
-  # from your drawing (meters)
   length_m: 0.307
   width_m: 0.247
   wheel_diameter_m: 0.097
   wheel_radius_m: 0.0485
-  wheelbase_m: 0.210
+  wheelbase_m: 0.21
   track_m: 0.202
-
   drive:
-    mode: "skid_steer"            # options: skid_steer | mecanum
+    mode: skid_steer
     wheel_count: 4
-    enforce_no_side_slip: true     # sim intent, not perfect physics guarantee
-    lateral_damping: 0.90          # 0=no damping, 1=full lateral velocity suppression
-
+    enforce_no_side_slip: true
+    lateral_damping: 0.9
 limits:
   v_max: 1.0
   w_max: 2.0
-  wheel_vel_max: 30.0              # rad/s (used when action_space=wheel_velocities)
-
+  wheel_vel_max: 30.0
 control:
-  action_space: "v_w"              # options: v_w | wheel_velocities
+  action_space: v_w
   rate_limit:
     enabled: true
-    max_delta_per_step: 0.20
-
+    max_delta_per_step: 0.2
 sensors:
   lidar:
     enabled: true
     rays: 360
     range_m: 10.0
   cameras:
-    render_camera: "front"
+    render_camera: front
     rgb:
       enabled: true
       width: 320
@@ -47,38 +41,48 @@ sensors:
       width: 320
       height: 240
       fov_deg: 90
-
 world:
-  arena_m: [10.0, 10.0]             # [x, y]
+  arena_m:
+  - 6.0
+  - 6.0
   goal:
     fixed: true
-    pos_m: [2.0, 0.0]
+    pos_m:
+    - 2.0
+    - 0.0
     yaw_deg: 0.0
-    clearance_m: 0.60
+    clearance_m: 0.6
     height_m: 0.01
   obstacles:
-    max_count: 30
-    count_range: [10, 25]
-    size_xy_range_m: [0.20, 0.80]
-    height_m: 0.30
-    cylinder_prob: 0.40             # probability of cylinder vs box
-    margin_m: 0.25                   # keep spawn away from robot/goal
-
+    max_count: 60
+    count_range:
+    - 20
+    - 40
+    size_xy_range_m:
+    - 0.3
+    - 1.2
+    height_m: 0.4
+    cylinder_prob: 0.4
+    margin_m: 0.25
 task:
   success:
-    pos_tol_m: 0.20
+    pos_tol_m: 0.2
     yaw_tol_deg: 10.0
-    stop_speed_mps: 0.10
+    stop_speed_mps: 0.1
   failure:
     collision: true
     stuck_sec: 1.5
     min_progress_m: 0.05
-
 reward:
-  enabled_terms: ["progress", "time", "smooth", "collision", "goal_bonus"]
+  enabled_terms:
+  - progress
+  - time
+  - smooth
+  - collision
+  - goal_bonus
   weights:
     progress: 1.0
-    time: -0.01
+    time: 0.0
     smooth: -0.05
     collision: -10.0
-    goal_bonus: 20.0
+    goal_bonus: 72.55
