--- a/config/train.yml
+++ b/config/train.yml
@@ -75,9 +75,10 @@ task:
     min_progress_m: 0.05
 
 reward:
-  enabled_terms: ["progress", "time", "smooth", "collision", "goal_bonus"]
+  enabled_terms: ["progress", "heading", "time", "smooth", "collision", "goal_bonus"]
   weights:
     progress: 1.0
+    heading: 2.0
     time: -0.01
     smooth: -0.05
     collision: -10.0
