--- a/src/neoskidrl/config/recommended_rewards.yml
+++ b/src/neoskidrl/config/recommended_rewards.yml
@@ -5,7 +5,7 @@ env:
   seed: 0
   dt: 0.02
   episode_sec: 10.0
-  frame_skip: 1
+  frame_skip: 4
 
 robot:
   length_m: 0.307
@@ -30,7 +30,7 @@ control:
   action_space: "v_w"
   rate_limit:
     enabled: true
-    max_delta_per_step: 0.20
+    max_delta_per_step: 1.0 # increased from 0.20 to 1.0 for bcs of the frame skip
 
 sensors:
   lidar:
@@ -59,9 +59,9 @@ world:
     clearance_m: 0.60
     height_m: 0.01
   obstacles:
-    max_count: 60
-    count_range: [5, 20] # reduced from 20-40 to 5-20 for easier learning
-    size_xy_range_m: [0.30, 1.20]
+    max_count: 25
+    count_range: [5, 15] # reduced from 20-40 to 5-20 for easier learning
+    size_xy_range_m: [0.10, 1.20]
     height_m: 0.40
     cylinder_prob: 0.40
     margin_m: 0.25
