--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,12 @@ ui = [
   "altair>=5.0",
   "streamlit-autorefresh>=1.0.0",
 ]
+dashboard = [
+  "fastapi>=0.109",
+  "uvicorn>=0.27",
+  "websockets>=12.0",
+  "python-multipart>=0.0.6",
+]
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
