feat: bigger goal marker, GPU monitoring, progress tracking, fix stop button
Visual improvements:
- Goal marker is now a large bright green cylinder (25cm radius, 30cm tall)
- Much more visible in videos and renderings

Monitoring:
- Added GPU status panel (utilization %, memory, temperature)
- Training progress shows timesteps, episodes, success rate
- Auto-refreshes every 3 seconds

Bug fixes:
- Stop button now works even if training already finished
- Returns proper status instead of 400 error

New API endpoints:
- GET /api/system/gpu - GPU stats from nvidia-smi
- GET /api/training/progress - Detailed training metrics

--- a/config/recommended_rewards.yml
+++ b/config/recommended_rewards.yml
@@ -57,7 +57,7 @@ world:
     pos_m: [2.0, 0.0]
     yaw_deg: 0.0
     clearance_m: 0.60
-    height_m: 0.01
+    height_m: 0.15  # Raised for visibility
   obstacles:
     max_count: 45
     count_range: [15, 35] # reduced from 20-40 to 5-20 for easier learning
